--- a/config/database.yml
+++ b/config/database.yml
@@ -81,4 +81,6 @@ test:
 #
 production:
   <<: *default
-  url: <%= ENV["DATABASE_URL"] %>
+  database: my_cool_app_production
+  username: my_cool_app
+  password: <%= ENV["TEST_APP_DATABASE_PASSWORD"] %>
